2004-06-25  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gsttcpserversink.c: (gst_tcpserversink_class_init),
	(gst_tcpserversink_init), (gst_tcpserversink_handle_server_read),
	(gst_tcpserversink_client_remove),
	(gst_tcpserversink_handle_client_read),
	(gst_tcpserversink_client_queue_data),
	(gst_tcpserversink_client_queue_caps),
	(gst_tcpserversink_client_queue_buffer),
	(gst_tcpserversink_handle_client_write),
	(gst_tcpserversink_queue_buffer),
	(gst_tcpserversink_handle_clients), (gst_tcpserversink_thread),
	(gst_tcpserversink_chain), (gst_tcpserversink_set_property),
	(gst_tcpserversink_get_property), (gst_tcpserversink_init_send),
	(gst_tcpserversink_close):
	* gst/tcp/gsttcpserversink.h:
	Serversink rewrite. Really do non blocking writes to clients and
	maintain an internal queue to handle slower clients while not
	disturbing fast clients.

2004-06-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/tcp/gsttcpclientsrc.c: (gst_tcpclientsrc_get):
	  better debug, don't override OFFSET and OFFSET_END

2004-06-25  Iain <iain@prettypeople.org>

	* gst-libs/gst/media-info/media-info-priv.c (gmi_set_mime): Add 
	name=source for the wavparse pipeline.

2004-06-24  Johan Dahlin  <johan@gnome.org>

	* ext/theora/theoraenc.c (theora_enc_chain): Call
	gst_pad_try_set_caps instead of gst_pad_set_explicit_caps so the
	streamheader caps are set correctly.

2004-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/vorbisenc.c: (raw_caps_factory),
	(gst_vorbisenc_setup), (gst_vorbisenc_set_property):
	  respect minimum bitrate; same could be done for max bitrate

2004-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/vorbisenc.c: (raw_caps_factory),
	(gst_vorbisenc_setup):
	  fix sample rate range

2004-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/oggvorbisenc.c: (gst_oggvorbisenc_class_init),
	(gst_oggvorbisenc_setup):
	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_class_init),